2004-05-28  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* README.hp-ux: Mention trouble with higher optimization levels
	  (from Ulrich Deiters <ukd@xenon.pc.Uni-Koeln.DE>).
	* doc/descriptions/unsupported.desc: Added Dell A920, Microtek
	  1850S and Plustek OpticPro m12. Removed HP,Scanjet 2300 (already
	  in genesys.desc).

2004-05-27  Oliver Schwartz <Oliver.Schwartz@gmx.de>

	* backend/snapscan.c backend/snapscan-usb.c: Use shared
	  memory for urb counters

2004-05-24  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/dll.c doc/descriptions/dll.desc: Work around 8 char
	  limit for dynamic loading on OS/2 (patch from Franz Bakan
	  <fbakan@gmx.net>).

2004-05-24  m. allan noah <anoah at pfeiffer dot edu>
	* backend/fujitsu.[ch]: apply Mattias Ellert's thread patch
	                        split packet counter into r and w

2004-05-23  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* tools/check-usb-scanner.c: Detect GL660+GL646 on USB2 also.
	  Fixed Mustek MA1017 scanner freeze problem.
	* backend/Makefile.in backend/agfafocus.c backend/agfafocus.h
	  backend/microtek2.c backend/microtek2.h backend/sp15c.c
	  backend/sp15c.h backend/tamarack.c backend/tamarack.h:
	  Use sanei_thread instead of fork() in the unmaintained backends.
	  Patches from Mattias Ellert (bugs: 300635, 300634, 300633, 300629).

2004-05-21  Gerhard Jaeger <gerhard@gjaeger.de>

	* sanei/sanei_pp.c: fixed compilation problem on HP-UX.

2004-05-21  Ulrich Deiters <ukd@xenon.pc.uni-koeln.de>

	* backend/canon.c, canon-sane.c, canon.h: removed an option
	  (OPT_PAGE) that conflicted with some frontends

2004-05-18  Ulrich Deiters <ukd@xenon.pc.uni-koeln.de>

	* backend/canon.c, canon-sane.c: memory leak and bug fixed
	  in slide scanner code

2004-05-18  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added more Canon cartridge
	  scanners. Updated Visioneer Paperport 3100b.

2004-05-18  Michael Herder <crapmail@nurfuerspam.de>
