@@ -5,6 +5,8 @@
 	* doc/descriptions/unsupported.desc: Added Dell A920, Microtek
 	  1850S and Plustek OpticPro m12. Removed HP,Scanjet 2300 (already
 	  in genesys.desc).
+	* backend/sp15c.c: Fixed sanei_thread fix (bug #300634, by Mattias
+	  Ellert).
 
 2004-05-27  Oliver Schwartz <Oliver.Schwartz@gmx.de>
 
